k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  # --- FIX 1: STRATEGY ---
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
      - name: frontend
        image: 120.0.0.1:30085/2401202-swarsetu-aaryatilak/swarsetu-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # --- FIX 2: RESOURCES ---
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
